RESOLVED FIXED185755
We don't throw SyntaxErrors for runtime generated regular expressions with errors
https://bugs.webkit.org/show_bug.cgi?id=185755
Summary We don't throw SyntaxErrors for runtime generated regular expressions with er...
Michael Saboff
Reported 2018-05-17 16:57:06 PDT
We properly handle and report syntax errors for statically declared regular expressions. When we need to compile a regular expression as part of executing methods that take a regular we sometime don't report errors.
Attachments
Patch (8.61 KB, patch)
2018-05-17 17:13 PDT, Michael Saboff
keith_miller: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews101 for mac-sierra (2.31 MB, application/zip)
2018-05-17 18:28 PDT, EWS Watchlist
no flags
Updated patch with new results for stack-overflow-regexp.js (17.35 KB, patch)
2018-05-17 18:32 PDT, Michael Saboff
no flags
Michael Saboff
Comment 1 2018-05-17 16:58:50 PDT
Michael Saboff
Comment 2 2018-05-17 17:13:33 PDT
Keith Miller
Comment 3 2018-05-17 17:20:03 PDT
Comment on attachment 340668 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=340668&action=review r=me. > Source/JavaScriptCore/runtime/RegExpConstructor.cpp:286 > + throwException(exec, scope, regExp->errorToThrow(exec)); shouldn't there be a return here? Why create an invalid RegExp?
Michael Saboff
Comment 4 2018-05-17 17:37:53 PDT
(In reply to Keith Miller from comment #3) > Comment on attachment 340668 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=340668&action=review > > r=me. > > > Source/JavaScriptCore/runtime/RegExpConstructor.cpp:286 > > + throwException(exec, scope, regExp->errorToThrow(exec)); > > shouldn't there be a return here? Why create an invalid RegExp? Sure, I'll return the exception object.
EWS Watchlist
Comment 5 2018-05-17 18:28:51 PDT
Comment on attachment 340668 [details] Patch Attachment 340668 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/7717410 New failing tests: js/stack-overflow-regexp.html
EWS Watchlist
Comment 6 2018-05-17 18:28:52 PDT
Created attachment 340669 [details] Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7 2018-05-17 18:29:48 PDT
Comment on attachment 340668 [details] Patch Attachment 340668 [details] did not pass jsc-ews (mac): Output: http://webkit-queues.webkit.org/results/7717358 New failing tests: jsc-layout-tests.yaml/js/script-tests/stack-overflow-regexp.js.layout-no-cjit jsc-layout-tests.yaml/js/script-tests/stack-overflow-regexp.js.layout-dfg-eager-no-cjit jsc-layout-tests.yaml/js/script-tests/stack-overflow-regexp.js.layout-no-llint jsc-layout-tests.yaml/js/script-tests/stack-overflow-regexp.js.layout jsc-layout-tests.yaml/js/script-tests/stack-overflow-regexp.js.layout-ftl-no-cjit jsc-layout-tests.yaml/js/script-tests/stack-overflow-regexp.js.layout-no-ftl jsc-layout-tests.yaml/js/script-tests/stack-overflow-regexp.js.layout-ftl-eager-no-cjit apiTests
Michael Saboff
Comment 8 2018-05-17 18:32:36 PDT
Created attachment 340670 [details] Updated patch with new results for stack-overflow-regexp.js
Keith Miller
Comment 9 2018-05-17 18:34:33 PDT
Comment on attachment 340670 [details] Updated patch with new results for stack-overflow-regexp.js r=me.
WebKit Commit Bot
Comment 10 2018-05-17 19:59:37 PDT
Comment on attachment 340670 [details] Updated patch with new results for stack-overflow-regexp.js Clearing flags on attachment: 340670 Committed r231939: <https://trac.webkit.org/changeset/231939>
WebKit Commit Bot
Comment 11 2018-05-17 19:59:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.